# stella_runtime

./: .gitignore  .gitmodules  CMakeLists.txt  gc.c  gc.h  run.sh  tests.py
stella/: gc.c  runtime.c  runtime.h
testdata/: fib.st  id.st
